# torch-pcdim

./: .gitignore  LICENSE  README.md  dataloaders.py  model.py  pyproject.toml  reproduce.py  simulation.py  torch_mnist.py  torch_model.py  torch_predcoding.py  torch_simulation.py  torch_training_simulation.py  torch_words.py  train_mnist.py  training_simulation.py  visualization.py  weights_nour_eddine_2023.py
examples/mnist/: mnist.py
examples/n400_simulation/: n400_model.py  run_simulation.py  training_simulation.py
examples/n400_simulation/data/: 1579words_ONsize.txt  1579words_conc_values.txt  trained_V.npy  unrepeated_matlab.csv
examples/n400_simulation_numpy/: model.py  run_simulation.py  simulation.py  training_simulation.py
helper_txt_files/: 1579words_freq_values.txt  1579words_words.txt  semantic_features.txt  semunrelated_matlab.csv
torch_pcdim/: __init__.py  layers.py  models.py
